--- a/index.html
+++ b/index.html
@@ -116,6 +116,38 @@ section h2 {
 
 iframe { width:100%; height:315px; border-radius:12px; }
 
+/* Form for adding videos (hidden initially) */
+#addVideoForm {
+  display:none;
+  margin-bottom:30px;
+  padding:20px;
+  background:#e3f2fd;
+  border-radius:12px;
+}
+#addVideoForm input {
+  padding:10px;
+  margin:5px 0;
+  width:100%;
+  font-size:1rem;
+}
+#addVideoForm button {
+  background-color:#0d47a1;
+  color:#fff;
+  padding:10px 15px;
+  border:none;
+  border-radius:8px;
+  cursor:pointer;
+  font-weight:bold;
+}
+#addVideoForm button:hover { background-color:#1976d2; }
+
+/* Delete button (hidden initially) */
+.deleteBtn {
+  background-color:#e53935;
+  margin-top:10px;
+}
+.deleteBtn:hover { background-color:#c62828; }
+
 /* Footer */
 footer {
   background: #1e1e1e;
@@ -125,33 +157,6 @@ footer {
   font-size:0.9rem;
 }
 footer a { color:#1976d2; text-decoration:none; }
-
-/* Form for adding video */
-#addVideoForm {
-  background: #fff;
-  padding:20px;
-  border-radius:12px;
-  box-shadow:0 4px 15px rgba(0,0,0,0.1);
-  margin-bottom:30px;
-}
-#addVideoForm input {
-  width: calc(50% - 10px);
-  padding:8px 12px;
-  margin-right:10px;
-  margin-bottom:10px;
-  border:1px solid #ccc;
-  border-radius:6px;
-}
-#addVideoForm button {
-  padding:10px 15px;
-  background:#1976d2;
-  color:#fff;
-  border:none;
-  border-radius:6px;
-  cursor:pointer;
-  font-weight:bold;
-}
-#addVideoForm button:hover { background:#0d47a1; }
 
 @media(max-width:992px){
   body { flex-direction:column; }
@@ -184,14 +189,20 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </header>
 
-<!-- About Section -->
+<!-- نموذج إضافة فيديو (سيظهر بعد إدخال كلمة المرور الصحيحة فقط) -->
+<div id="addVideoForm">
+  <h2>إضافة فيديو جديد</h2>
+  <input type="text" id="videoTitle" placeholder="عنوان الفيديو">
+  <input type="text" id="videoURL" placeholder="رابط الفيديو من YouTube">
+  <button onclick="addVideo()">إضافة الفيديو</button>
+</div>
+
 <section id="about">
   <h2>About This Website</h2>
   <p>Spoken Arabic Now teaches <strong>Egyptian Spoken Arabic</strong>, not formal or textbook Arabic. Communicate naturally with real-life expressions Egyptians use daily.</p>
   <p>Focus on conversation, pronunciation, and real phrases heard in streets, cafes, and daily life.</p>
 </section>
 
-<!-- Lessons Section -->
 <section id="lessons">
   <h2>What You Will Learn</h2>
   <div class="features">
@@ -210,46 +221,31 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </section>
 
-<!-- Video Lessons Section -->
 <section id="videos">
   <h2>Video Lessons</h2>
-
-  <!-- نموذج لإضافة فيديو جديد -->
-  <div id="addVideoForm">
-    <input type="text" id="videoTitle" placeholder="عنوان الفيديو">
-    <input type="text" id="videoURL" placeholder="رابط الفيديو">
-    <button onclick="addVideo()">إضافة فيديو</button>
-  </div>
-
-  <!-- حاوية الفيديوهات -->
   <div class="videos" id="videosContainer">
-
-    <!-- فيديوهات مضافة يدويًا سابقًا -->
+    <!-- الفيديوهات الموجودة مسبقًا -->
     <div class="box">
       <h3>Lesson 1: Mind your own business</h3>
       <iframe src="https://www.youtube.com/embed/nKUIVL5RDaQ" allowfullscreen></iframe>
       <a class="button" href="https://www.youtube.com/shorts/nKUIVL5RDaQ" target="_blank">Watch on YouTube</a>
-      <button onclick="deleteVideo(this)">حذف الفيديو</button>
+      <button class="deleteBtn" onclick="deleteVideo(this)">حذف الفيديو</button>
     </div>
-
     <div class="box">
       <h3>Lesson 2: You Command – I’m at Your Service</h3>
       <iframe src="https://www.youtube.com/embed/NXmhi7uiX7k" allowfullscreen></iframe>
       <a class="button" href="https://www.youtube.com/shorts/NXmhi7uiX7k" target="_blank">Watch on YouTube</a>
-      <button onclick="deleteVideo(this)">حذف الفيديو</button>
+      <button class="deleteBtn" onclick="deleteVideo(this)">حذف الفيديو</button>
     </div>
-
     <div class="box">
       <h3>Lesson 3: Stop Showing Off</h3>
       <iframe src="https://www.youtube.com/embed/pn6B8bHghek" allowfullscreen></iframe>
       <a class="button" href="https://www.youtube.com/shorts/pn6B8bHghek" target="_blank">Watch on YouTube</a>
-      <button onclick="deleteVideo(this)">حذف الفيديو</button>
+      <button class="deleteBtn" onclick="deleteVideo(this)">حذف الفيديو</button>
     </div>
-
   </div>
 </section>
 
-<!-- Resources Section -->
 <section id="resources">
   <h2>Downloadable Resources</h2>
   <div class="resources">
@@ -266,14 +262,12 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </section>
 
-<!-- Egyptian Arabic Section -->
 <section id="egyptian">
   <h2>Why Egyptian Arabic?</h2>
   <p>Egyptian Arabic is the most widely understood dialect in the Arab world. Learning it allows you to communicate with millions of people across different countries.</p>
   <p>This platform teaches you how Egyptians really speak — simple, fast, and natural.</p>
 </section>
 
-<!-- Contact Section -->
 <section id="contact">
   <h2>Contact</h2>
   <p>
@@ -282,59 +276,70 @@ footer a { color:#1976d2; text-decoration:none; }
   </p>
 </section>
 
-<!-- Footer -->
 <footer>
   <p>&copy; 2026 Spoken Arabic Now. All rights reserved.</p>
 </footer>
 
-<!-- سكربت لإضافة الفيديو وحذف الفيديو مع تأكيد -->
 <script>
-function addVideo() {
-  const title = document.getElementById('videoTitle').value.trim();
-  const url = document.getElementById('videoURL').value.trim();
-  if (!title || !url) { alert("الرجاء إدخال عنوان ورابط الفيديو"); return; }
-
-  // استخراج الـ Video ID من أي رابط يوتيوب
-  let videoID = "";
-  try {
-    const ytRegex = /(?:https?:\/\/)?(?:www\.)?(?:youtube\.com\/watch\?v=|youtube\.com\/shorts\/|youtu\.be\/)([a-zA-Z0-9_-]{11})/;
-    const match = url.match(ytRegex);
-    if (match && match[1]) { videoID = match[1]; }
-    else { throw "Invalid URL"; }
-  } catch {
-    alert("رابط فيديو يوتيوب غير صالح!");
-    return;
+// طلب كلمة مرور عند تحميل الصفحة
+const password = "1234"; // غير هذا إلى أي كلمة مرور تريد
+window.onload = function() {
+  let userPass = prompt("أدخل كلمة المرور للوصول إلى أدوات الإدارة:");
+  if(userPass === password){
+    document.getElementById("addVideoForm").style.display = "block"; // إظهار نموذج الإضافة
+    // إظهار جميع أزرار الحذف
+    let deleteButtons = document.querySelectorAll(".deleteBtn");
+    deleteButtons.forEach(btn => btn.style.display = "inline-block");
   }
-
-  // إنشاء العنصر الجديد
-  const container = document.getElementById('videosContainer');
-  const box = document.createElement('div');
-  box.className = 'box';
-  box.innerHTML = `
-    <h3>${title}</h3>
-    <iframe src="https://www.youtube.com/embed/${videoID}" allowfullscreen></iframe>
-    <a class="button" href="${url}" target="_blank">Watch on YouTube</a>
-    <button onclick="deleteVideo(this)">حذف الفيديو</button>
-  `;
-  container.appendChild(box);
-
-  // إعادة تعيين الحقول
-  document.getElementById('videoTitle').value = '';
-  document.getElementById('videoURL').value = '';
 }
 
-// حذف الفيديو مع رسالة تأكيد
-function deleteVideo(button) {
-  if (confirm("هل أنت متأكد أنك تريد حذف هذا الفيديو؟")) {
-    button.parentElement.remove();
+// دالة إضافة فيديو جديد
+function addVideo(){
+  let title = document.getElementById("videoTitle").value;
+  let url = document.getElementById("videoURL").value;
+  if(title && url){
+    let videoID = extractVideoID(url);
+    if(!videoID){
+      alert("الرابط غير صالح!");
+      return;
+    }
+    let container = document.getElementById("videosContainer");
+    let div = document.createElement("div");
+    div.className = "box";
+    div.innerHTML = `
+      <h3>${title}</h3>
+      <iframe src="https://www.youtube.com/embed/${videoID}" allowfullscreen></iframe>
+      <a class="button" href="${url}" target="_blank">Watch on YouTube</a>
+      <button class="deleteBtn" onclick="deleteVideo(this)">حذف الفيديو</button>
+    `;
+    container.appendChild(div);
+    document.getElementById("videoTitle").value = "";
+    document.getElementById("videoURL").value = "";
+  } else {
+    alert("يرجى إدخال العنوان والرابط");
+  }
+}
+
+// استخراج معرف الفيديو من أي رابط YouTube (shorts أو watch)
+function extractVideoID(url){
+  let id = null;
+  if(url.includes("youtu.be/")){
+    id = url.split("youtu.be/")[1].split("?")[0];
+  } else if(url.includes("youtube.com/watch?v=")){
+    id = url.split("v=")[1].split("&")[0];
+  } else if(url.includes("youtube.com/shorts/")){
+    id = url.split("shorts/")[1].split("?")[0];
+  }
+  return id;
+}
+
+// دالة حذف الفيديو مع رسالة تأكيد
+function deleteVideo(btn){
+  if(confirm("هل أنت متأكد أنك تريد حذف هذا الفيديو؟")){
+    btn.parentElement.remove();
   }
 }
 </script>
 
-</main>
 </body>
 </html>
-
-
-
-
