--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ section h2 {
   display:flex;
   flex-direction:column;
   justify-content:space-between;
+  position: relative;
 }
 .box:hover {
   transform: translateY(-6px);
@@ -114,39 +115,22 @@ section h2 {
 }
 .box a.button:hover { background-color:#0d47a1; }
 
-iframe { width:100%; height:315px; border-radius:12px; }
-
-/* Form for adding videos (hidden initially) */
-#addVideoForm {
-  display:none;
-  margin-bottom:30px;
-  padding:20px;
-  background:#e3f2fd;
-  border-radius:12px;
-}
-#addVideoForm input {
-  padding:10px;
-  margin:5px 0;
-  width:100%;
-  font-size:1rem;
-}
-#addVideoForm button {
-  background-color:#0d47a1;
+/* زر الحذف */
+.box button.deleteBtn {
+  background-color:#e74c3c;
   color:#fff;
-  padding:10px 15px;
   border:none;
-  border-radius:8px;
+  padding:8px 12px;
+  border-radius:6px;
   cursor:pointer;
   font-weight:bold;
+  position:absolute;
+  top:15px;
+  right:15px;
 }
-#addVideoForm button:hover { background-color:#1976d2; }
+.box button.deleteBtn:hover { background-color:#c0392b; }
 
-/* Delete button (hidden initially) */
-.deleteBtn {
-  background-color:#e53935;
-  margin-top:10px;
-}
-.deleteBtn:hover { background-color:#c62828; }
+iframe { width:100%; height:315px; border-radius:12px; }
 
 /* Footer */
 footer {
@@ -158,6 +142,17 @@ footer {
 }
 footer a { color:#1976d2; text-decoration:none; }
 
+/* زر إضافة الفيديو */
+#showAddVideoBtn, #addVideoBtn {
+  margin-top:10px;
+}
+#addVideoForm input {
+  margin-right:10px;
+  padding:8px;
+  width:250px;
+}
+
+/* Responsive */
 @media(max-width:992px){
   body { flex-direction:column; }
   .sidebar { width:100%; height:auto; position:relative; }
@@ -189,20 +184,14 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </header>
 
-<!-- نموذج إضافة فيديو (سيظهر بعد إدخال كلمة المرور الصحيحة فقط) -->
-<div id="addVideoForm">
-  <h2>إضافة فيديو جديد</h2>
-  <input type="text" id="videoTitle" placeholder="عنوان الفيديو">
-  <input type="text" id="videoURL" placeholder="رابط الفيديو من YouTube">
-  <button onclick="addVideo()">إضافة الفيديو</button>
-</div>
-
+<!-- قسم حول الموقع -->
 <section id="about">
   <h2>About This Website</h2>
   <p>Spoken Arabic Now teaches <strong>Egyptian Spoken Arabic</strong>, not formal or textbook Arabic. Communicate naturally with real-life expressions Egyptians use daily.</p>
   <p>Focus on conversation, pronunciation, and real phrases heard in streets, cafes, and daily life.</p>
 </section>
 
+<!-- قسم ما ستتعلمه -->
 <section id="lessons">
   <h2>What You Will Learn</h2>
   <div class="features">
@@ -221,31 +210,49 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </section>
 
+<!-- قسم الفيديوهات -->
 <section id="videos">
   <h2>Video Lessons</h2>
-  <div class="videos" id="videosContainer">
-    <!-- الفيديوهات الموجودة مسبقًا -->
+
+  <!-- زر إضافة الفيديو (يظهر فقط) -->
+  <button id="showAddVideoBtn" class="button">إضافة فيديو</button>
+
+  <!-- نموذج إضافة الفيديو مخفي افتراضياً -->
+  <div id="addVideoForm" style="display:none; margin-top:15px;">
+    <input type="text" id="videoTitle" placeholder="عنوان الفيديو">
+    <input type="text" id="videoURL" placeholder="رابط الفيديو">
+    <button id="addVideoBtn" class="button">أضف الفيديو</button>
+  </div>
+
+  <!-- حاوية الفيديوهات -->
+  <div class="videos" id="videoContainer">
+    <!-- فيديوهات موجودة مسبقاً -->
     <div class="box">
       <h3>Lesson 1: Mind your own business</h3>
       <iframe src="https://www.youtube.com/embed/nKUIVL5RDaQ" allowfullscreen></iframe>
       <a class="button" href="https://www.youtube.com/shorts/nKUIVL5RDaQ" target="_blank">Watch on YouTube</a>
-      <button class="deleteBtn" onclick="deleteVideo(this)">حذف الفيديو</button>
+      <button class="deleteBtn">حذف</button>
     </div>
+
     <div class="box">
       <h3>Lesson 2: You Command – I’m at Your Service</h3>
       <iframe src="https://www.youtube.com/embed/NXmhi7uiX7k" allowfullscreen></iframe>
       <a class="button" href="https://www.youtube.com/shorts/NXmhi7uiX7k" target="_blank">Watch on YouTube</a>
-      <button class="deleteBtn" onclick="deleteVideo(this)">حذف الفيديو</button>
+      <button class="deleteBtn">حذف</button>
     </div>
+
     <div class="box">
       <h3>Lesson 3: Stop Showing Off</h3>
       <iframe src="https://www.youtube.com/embed/pn6B8bHghek" allowfullscreen></iframe>
       <a class="button" href="https://www.youtube.com/shorts/pn6B8bHghek" target="_blank">Watch on YouTube</a>
-      <button class="deleteBtn" onclick="deleteVideo(this)">حذف الفيديو</button>
+      <button class="deleteBtn">حذف</button>
     </div>
+
+    <!-- يمكنك إضافة باقي الفيديوهات هنا بنفس التنسيق -->
   </div>
 </section>
 
+<!-- قسم الموارد -->
 <section id="resources">
   <h2>Downloadable Resources</h2>
   <div class="resources">
@@ -262,12 +269,14 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </section>
 
+<!-- قسم لماذا المصرية -->
 <section id="egyptian">
   <h2>Why Egyptian Arabic?</h2>
   <p>Egyptian Arabic is the most widely understood dialect in the Arab world. Learning it allows you to communicate with millions of people across different countries.</p>
   <p>This platform teaches you how Egyptians really speak — simple, fast, and natural.</p>
 </section>
 
+<!-- قسم الاتصال -->
 <section id="contact">
   <h2>Contact</h2>
   <p>
@@ -276,70 +285,93 @@ footer a { color:#1976d2; text-decoration:none; }
   </p>
 </section>
 
+<!-- Footer -->
 <footer>
   <p>&copy; 2026 Spoken Arabic Now. All rights reserved.</p>
 </footer>
 
-<script>
-// طلب كلمة مرور عند تحميل الصفحة
-const password = "1234"; // غير هذا إلى أي كلمة مرور تريد
-window.onload = function() {
-  let userPass = prompt("أدخل كلمة المرور للوصول إلى أدوات الإدارة:");
-  if(userPass === password){
-    document.getElementById("addVideoForm").style.display = "block"; // إظهار نموذج الإضافة
-    // إظهار جميع أزرار الحذف
-    let deleteButtons = document.querySelectorAll(".deleteBtn");
-    deleteButtons.forEach(btn => btn.style.display = "inline-block");
-  }
-}
+</main>
 
-// دالة إضافة فيديو جديد
-function addVideo(){
-  let title = document.getElementById("videoTitle").value;
-  let url = document.getElementById("videoURL").value;
-  if(title && url){
-    let videoID = extractVideoID(url);
-    if(!videoID){
-      alert("الرابط غير صالح!");
+<!-- سكريبت لإضافة وحذف الفيديوهات -->
+<script>
+const password = "1234"; // كلمة المرور المطلوبة لإضافة الفيديو
+const showAddVideoBtn = document.getElementById('showAddVideoBtn');
+const addVideoForm = document.getElementById('addVideoForm');
+const addVideoBtn = document.getElementById('addVideoBtn');
+const videoContainer = document.getElementById('videoContainer');
+
+// إظهار نموذج إضافة الفيديو بعد التحقق من كلمة المرور
+showAddVideoBtn.addEventListener('click', () => {
+  const userPass = prompt("أدخل كلمة المرور لإضافة فيديو:");
+  if(userPass === password){
+    addVideoForm.style.display = 'block';
+  } else {
+    alert("كلمة المرور غير صحيحة!");
+  }
+});
+
+// إضافة فيديو جديد تلقائياً للقسم
+addVideoBtn.addEventListener('click', () => {
+  const title = document.getElementById('videoTitle').value.trim();
+  const url = document.getElementById('videoURL').value.trim();
+  if(!title || !url){
+    alert("يرجى ملء جميع الحقول!");
+    return;
+  }
+
+  // استخراج ID الفيديو من الرابط
+  let videoId = "";
+  try{
+    if(url.includes("youtube.com/watch?v=")){
+      videoId = url.split("v=")[1].split("&")[0];
+    } else if(url.includes("youtu.be/")){
+      videoId = url.split("youtu.be/")[1].split("?")[0];
+    } else if(url.includes("/shorts/")){
+      videoId = url.split("/shorts/")[1].split("?")[0];
+    } else {
+      alert("رابط YouTube غير صالح!");
       return;
     }
-    let container = document.getElementById("videosContainer");
-    let div = document.createElement("div");
-    div.className = "box";
-    div.innerHTML = `
-      <h3>${title}</h3>
-      <iframe src="https://www.youtube.com/embed/${videoID}" allowfullscreen></iframe>
-      <a class="button" href="${url}" target="_blank">Watch on YouTube</a>
-      <button class="deleteBtn" onclick="deleteVideo(this)">حذف الفيديو</button>
-    `;
-    container.appendChild(div);
-    document.getElementById("videoTitle").value = "";
-    document.getElementById("videoURL").value = "";
-  } else {
-    alert("يرجى إدخال العنوان والرابط");
+  } catch(e){
+    alert("رابط YouTube غير صالح!");
+    return;
   }
-}
 
-// استخراج معرف الفيديو من أي رابط YouTube (shorts أو watch)
-function extractVideoID(url){
-  let id = null;
-  if(url.includes("youtu.be/")){
-    id = url.split("youtu.be/")[1].split("?")[0];
-  } else if(url.includes("youtube.com/watch?v=")){
-    id = url.split("v=")[1].split("&")[0];
-  } else if(url.includes("youtube.com/shorts/")){
-    id = url.split("shorts/")[1].split("?")[0];
-  }
-  return id;
-}
+  // إنشاء عنصر الفيديو الجديد
+  const box = document.createElement('div');
+  box.className = 'box';
+  box.innerHTML = `
+    <h3>${title}</h3>
+    <iframe src="https://www.youtube.com/embed/${videoId}" allowfullscreen></iframe>
+    <a class="button" href="${url}" target="_blank">Watch on YouTube</a>
+    <button class="deleteBtn">حذف</button>
+  `;
+  videoContainer.appendChild(box);
 
-// دالة حذف الفيديو مع رسالة تأكيد
-function deleteVideo(btn){
-  if(confirm("هل أنت متأكد أنك تريد حذف هذا الفيديو؟")){
-    btn.parentElement.remove();
-  }
-}
+  // إضافة وظيفة الحذف
+  box.querySelector('.deleteBtn').addEventListener('click', () => {
+    if(confirm("هل أنت متأكد أنك تريد حذف هذا الفيديو؟")){
+      box.remove();
+    }
+  });
+
+  // مسح الحقول بعد الإضافة
+  document.getElementById('videoTitle').value = "";
+  document.getElementById('videoURL').value = "";
+});
+
+// تفعيل زر الحذف لكل الفيديوهات الموجودة مسبقاً
+document.querySelectorAll('.deleteBtn').forEach(btn => {
+  btn.addEventListener('click', e => {
+    const box = e.target.parentElement;
+    if(confirm("هل أنت متأكد أنك تريد حذف هذا الفيديو؟")){
+      box.remove();
+    }
+  });
+});
 </script>
 
 </body>
 </html>
+
+
