--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
   min-height:100vh;
 }
 
-/* القائمة الجانبية */
+/* Sidebar */
 .sidebar {
   width: 250px;
   background: #1e1e1e;
@@ -116,19 +116,6 @@ section h2 {
 
 iframe { width:100%; height:315px; border-radius:12px; }
 
-/* زر الحذف */
-.deleteBtn {
-  background-color: #e74c3c;
-  color:#fff;
-  border:none;
-  padding:8px 12px;
-  border-radius:6px;
-  cursor:pointer;
-  margin-top:10px;
-  transition: background-color 0.3s ease;
-}
-.deleteBtn:hover { background-color:#c0392b; }
-
 /* Footer */
 footer {
   background: #1e1e1e;
@@ -139,29 +126,9 @@ footer {
 }
 footer a { color:#1976d2; text-decoration:none; }
 
-/* عناصر إضافة الفيديو */
-#videoForm {
-  display:none;
-  margin-top:20px;
-}
-#videoForm input {
-  width:100%;
-  padding:8px 10px;
-  margin-bottom:10px;
-  border-radius:6px;
-  border:1px solid #ccc;
-}
-#videoForm button {
-  width:100%;
-  padding:10px;
-  border:none;
-  border-radius:6px;
-  background:#1976d2;
-  color:#fff;
-  font-weight:bold;
-  cursor:pointer;
-}
-#videoForm button:hover { background:#0d47a1; }
+#videoForm { display:none; flex-direction:column; gap:10px; margin-top:15px; }
+#videoForm input { padding:8px 10px; border-radius:5px; border:1px solid #ccc; width:100%; }
+#videoForm button { padding:8px 10px; border:none; border-radius:5px; background:#0d47a1; color:#fff; cursor:pointer; }
 
 @media(max-width:992px){
   body { flex-direction:column; }
@@ -173,7 +140,7 @@ footer a { color:#1976d2; text-decoration:none; }
 </head>
 <body>
 
-<!-- القائمة الجانبية -->
+<!-- Sidebar -->
 <div class="sidebar">
   <h2>Navigation</h2>
   <a href="#about">About</a>
@@ -183,19 +150,18 @@ footer a { color:#1976d2; text-decoration:none; }
   <a href="#egyptian">Egyptian Arabic</a>
   <a href="#contact">Contact</a>
 
-  <!-- زر إضافة الفيديو -->
+  <!-- زر إضافة فيديو -->
   <button id="showFormBtn" style="margin-top:20px; width:100%; padding:10px; border:none; border-radius:6px; background:#0d47a1; color:#fff; cursor:pointer;">إضافة فيديو جديد</button>
 
-  <!-- نموذج إضافة الفيديو -->
+  <!-- نموذج إضافة الفيديو (حقل عنوان الفيديو ورابطه فقط بعد إدخال كلمة المرور) -->
   <div id="videoForm">
-    <input type="text" id="videoPassword" placeholder="أدخل كلمة المرور">
-    <input type="text" id="videoTitle" placeholder="عنوان الفيديو">
-    <input type="text" id="videoURL" placeholder="رابط YouTube">
-    <button id="addVideoBtn">إضافة الفيديو</button>
+      <input type="text" id="videoTitle" placeholder="عنوان الفيديو">
+      <input type="text" id="videoURL" placeholder="رابط YouTube">
+      <button id="addVideoBtn">إضافة الفيديو</button>
   </div>
 </div>
 
-<!-- المحتوى الرئيسي -->
+<!-- Main content -->
 <main>
 <header>
   <img src="logo.png" alt="Spoken Arabic Now Logo">
@@ -229,11 +195,25 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </section>
 
-<!-- قسم فيديوهات الدروس -->
 <section id="videos">
   <h2>Video Lessons</h2>
-  <div class="videos" id="videoContainer">
-    <!-- الفيديوهات ستُضاف هنا تلقائياً -->
+  <div class="videos" id="videoList">
+    <!-- الفيديوهات المضافة يدويًا -->
+    <div class="box">
+      <h3>Lesson 1: Mind your own business</h3>
+      <iframe src="https://www.youtube.com/embed/nKUIVL5RDaQ" allowfullscreen></iframe>
+      <a class="button" href="https://www.youtube.com/shorts/nKUIVL5RDaQ" target="_blank">Watch on YouTube</a>
+    </div>
+    <div class="box">
+      <h3>Lesson 2: You Command – I’m at Your Service</h3>
+      <iframe src="https://www.youtube.com/embed/NXmhi7uiX7k" allowfullscreen></iframe>
+      <a class="button" href="https://www.youtube.com/shorts/NXmhi7uiX7k" target="_blank">Watch on YouTube</a>
+    </div>
+    <div class="box">
+      <h3>Lesson 3: Stop Showing Off</h3>
+      <iframe src="https://www.youtube.com/embed/pn6B8bHghek" allowfullscreen></iframe>
+      <a class="button" href="https://www.youtube.com/shorts/pn6B8bHghek" target="_blank">Watch on YouTube</a>
+    </div>
   </div>
 </section>
 
@@ -271,94 +251,70 @@ footer a { color:#1976d2; text-decoration:none; }
   <p>&copy; 2026 Spoken Arabic Now. All rights reserved.</p>
 </footer>
 
+</main>
+
 <script>
-// العنصر الرئيسي لحاوية الفيديوهات
-const videoContainer = document.getElementById('videoContainer');
+// كلمة المرور
+const PASSWORD = "1234"; // ضع هنا كلمة المرور الخاصة بك
+
 const showFormBtn = document.getElementById('showFormBtn');
 const videoForm = document.getElementById('videoForm');
 const addVideoBtn = document.getElementById('addVideoBtn');
-const videoPasswordInput = document.getElementById('videoPassword');
 const videoTitleInput = document.getElementById('videoTitle');
 const videoURLInput = document.getElementById('videoURL');
-
-// كلمة المرور
-const PASSWORD = "1234"; // ضع هنا كلمة المرور الخاصة بك
+const videoList = document.getElementById('videoList');
 
 // إظهار نموذج إضافة الفيديو بعد إدخال كلمة المرور الصحيحة
 showFormBtn.addEventListener('click', () => {
   const pass = prompt("أدخل كلمة المرور:");
   if(pass === PASSWORD){
-    videoForm.style.display = "block";
+    videoForm.style.display = "flex"; // يظهر الحقول بعد التحقق
   } else {
     alert("كلمة المرور غير صحيحة!");
   }
 });
 
-// تحميل الفيديوهات من LocalStorage عند البداية
-const savedVideos = JSON.parse(localStorage.getItem('myVideos')) || [];
-savedVideos.forEach(video => addVideoToPage(video.title, video.url));
-
-// دالة لإضافة فيديو إلى الصفحة
-function addVideoToPage(title, url){
-  let videoId = "";
-  if(url.includes("youtube.com/watch?v=")){
-    videoId = url.split("v=")[1].split("&")[0];
-  } else if(url.includes("youtu.be/")){
-    videoId = url.split("youtu.be/")[1].split("?")[0];
-  } else if(url.includes("/shorts/")){
-    videoId = url.split("/shorts/")[1].split("?")[0];
-  } else {
-    alert("رابط YouTube غير صالح!");
-    return;
-  }
-
-  const box = document.createElement('div');
-  box.className = 'box';
-  box.innerHTML = `
-    <h3>${title}</h3>
-    <iframe src="https://www.youtube.com/embed/${videoId}" allowfullscreen></iframe>
-    <a class="button" href="${url}" target="_blank">Watch on YouTube</a>
-    <button class="deleteBtn">حذف</button>
-  `;
-  videoContainer.appendChild(box);
-
-  // زر الحذف مع رسالة التأكيد
-  box.querySelector('.deleteBtn').addEventListener('click', () => {
-    if(confirm("هل أنت متأكد أنك تريد حذف هذا الفيديو؟")){
-      box.remove();
-      saveVideosToStorage();
-    }
-  });
-}
-
-// حفظ الفيديوهات في LocalStorage
-function saveVideosToStorage(){
-  const videos = [];
-  document.querySelectorAll('#videoContainer .box').forEach(box => {
-    const title = box.querySelector('h3').innerText;
-    const url = box.querySelector('a.button').href;
-    videos.push({title, url});
-  });
-  localStorage.setItem('myVideos', JSON.stringify(videos));
-}
-
-// إضافة فيديو جديد عند الضغط على الزر
+// إضافة الفيديو إلى قسم الفيديوهات
 addVideoBtn.addEventListener('click', () => {
   const title = videoTitleInput.value.trim();
   const url = videoURLInput.value.trim();
-  if(!title || !url){
-    alert("يرجى ملء جميع الحقول!");
-    return;
+  if(title && url){
+    // استخراج معرف الفيديو إذا كان رابط شورت أو رابط عادي
+    let videoId = "";
+    if(url.includes("youtu.be/")){
+      videoId = url.split("youtu.be/")[1].split("?")[0];
+    } else if(url.includes("youtube.com/watch?v=")){
+      videoId = url.split("v=")[1].split("&")[0];
+    } else if(url.includes("youtube.com/shorts/")){
+      videoId = url.split("shorts/")[1].split("?")[0];
+    } else {
+      alert("رابط YouTube غير صالح!");
+      return;
+    }
+
+    // إنشاء عنصر الفيديو
+    const box = document.createElement('div');
+    box.classList.add('box');
+    box.innerHTML = `
+      <h3>${title}</h3>
+      <iframe src="https://www.youtube.com/embed/${videoId}" allowfullscreen></iframe>
+      <a class="button" href="${url}" target="_blank">Watch on YouTube</a>
+    `;
+    videoList.appendChild(box);
+
+    // إعادة تعيين الحقول
+    videoTitleInput.value = "";
+    videoURLInput.value = "";
+  } else {
+    alert("يرجى إدخال عنوان الفيديو والرابط!");
   }
-  addVideoToPage(title, url);
-  saveVideosToStorage();
-  videoTitleInput.value = "";
-  videoURLInput.value = "";
 });
 </script>
 
 </body>
 </html>
+
+
 
 
 
